[package]
name = "shs"
version = "0.2.1"
authors = ["Jay Deiman <jay@splitstreams.com>"]
description = "A simple HTTP sink.  This will run an http server on a specified port"
edition = "2018"
license-file = "LICENSE.txt"
keywords = ["http", "server", "sink"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
log = "0.4.14"
chrono = "0.4.19"
iron = "0.6.1"
