[package]
name = "shs"
version = "0.2.4"
authors = ["Jay Deiman <admin@splitstreams.com>"]
description = "A simple HTTP sink.  This will run an http server on a specified port"
edition = "2024"
license-file = "LICENSE.txt"
keywords = ["http", "server", "sink"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4", features=["derive", "cargo"] }
log = "0.4"
chrono = "0.4"
iron = "0.6"

[profile.dev]
overflow-checks = true
opt-level = 1